--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -150,7 +150,7 @@ jobs:
       - build-kernel-a14-5-15
       - build-kernel-a14-6-1
       - build-kernel-a15-6-6
-    if: always() # CRITICAL FIX FOR SINGLE-JOB RELEASES - ensures this job always attempts to run
+    if: always() # Ensures this job runs to determine overall status
     outputs:
       should_release: ${{ steps.check.outputs.should_release }}
     steps:
@@ -199,10 +199,11 @@ jobs:
                 ERROR_MESSAGE+="Job for $kernel_id was expected to run but did not succeed (result: $actual_result). "
               fi
             else
-              if [[ "$actual_result" == "failure" ]]; then
+              if [[ "$actual_result" == "failure" ]]; then # If it was skipped but failed for some reason
                 SHOULD_PROCEED="false"
                 ERROR_MESSAGE+="Job for $kernel_id was NOT expected to run but failed (result: $actual_result). This indicates a problem with its own 'if' condition or the workflow setup. "
               fi
+              # If actual_result is 'skipped' (which it should be for unselected jobs), SHOULD_PROCEED remains true.
             fi
           }
 
@@ -229,18 +230,12 @@ jobs:
     permissions:
       contents: write
       actions: write
+    # ▼▼▼ KEY CHANGE HERE: Simplified `needs` to only the jobs that *always* run or are critical for decision ▼▼▼
     needs:
-      - get_manager
-      - build-kernel-a12-5-10
-      - build-kernel-a13-5-10
-      - build-kernel-a13-5-15
-      - build-kernel-a14-5-15
-      - build-kernel-a14-6-1
-      - build-kernel-a15-6-6
       - check-build-status
-    # This is the key change!
-    # It tells GitHub Actions to *always* attempt to run this job,
-    # regardless of whether some of its `needs` dependencies were skipped.
+      - get_manager # Keep this as you download manager artifacts later in this job
+    
+    # Keep if: always() to ensure the job execution is attempted
     if: always() 
     env:
       REPO_OWNER: Kavi 
@@ -284,7 +279,6 @@ jobs:
 
       - name: Checkout code
         # This step, and all subsequent steps, now also needs to be conditional.
-        # It's generally cleaner to add the `if` to each step for this pattern.
         if: ${{ steps.release_check.outcome == 'success' }}
         uses: actions/checkout@v3
 
@@ -457,7 +451,7 @@ jobs:
               cd temp_ksu_repo || exit 1
               KSU_GIT_VERSION=$(git rev-list --count HEAD)
               KSU_VERSION_SUFFIX="($((10000 + KSU_GIT_VERSION + 200)))"
-              cd "..
+              cd ..
               rm -rf temp_ksu_repo
             else
               echo "Warning: Could not clone KernelSU-Next repository for versioning." >&2
