--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -153,7 +153,6 @@ jobs:
     outputs:
       should_release: ${{ steps.check.outputs.should_release }}
     env:
-      # Fixed environment variables - each on its own line
       SHOULD_RUN_A12_5_10: ${{ contains(github.event.inputs.kernels_to_build, 'all') || contains(github.event.inputs.kernels_to_build, 'a12') || contains(github.event.inputs.kernels_to_build, 'a12-5.10') }}
       SHOULD_RUN_A13_5_10: ${{ contains(github.event.inputs.kernels_to_build, 'all') || contains(github.event.inputs.kernels_to_build, 'a13-5.10') || contains(github.event.inputs.kernels_to_build, 'a13') }}
       SHOULD_RUN_A13_5_15: ${{ contains(github.event.inputs.kernels_to_build, 'all') || contains(github.event.inputs.kernels_to_build, 'a13') || contains(github.event.inputs.kernels_to_build, 'a13-5.15') }}
@@ -400,12 +399,31 @@ jobs:
           echo -e "$FINAL_RELEASE_NOTES" >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
           
+      # Install GitHub CLI and authenticate
+      - name: Install GitHub CLI
+        if: ${{ steps.release_check.outcome == 'success' }}
+        run: |
+          type -p gh >/dev/null || {
+            curl -sSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | sudo dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg
+            sudo chmod go+r /usr/share/keyrings/githubcli-archive-keyring.gpg
+            echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | sudo tee /etc/apt/sources.list.d/github-cli.list >/dev/null
+            sudo apt update && sudo apt install gh -y
+          }
+          
+      - name: Authenticate GitHub CLI
+        if: ${{ steps.release_check.outcome == 'success' }}
+        run: gh auth login --with-token <<< "$GITHUB_TOKEN"
+        
       - name: Generate and Create New Tag
         if: ${{ steps.release_check.outcome == 'success' }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          LATEST_TAG=$(gh api repos/$REPO_OWNER/$REPO_NAME/tags --jq '.[0].name' 2>/dev/null)
+          set -e  # Exit on error
+          
+          # Get the latest tag
+          LATEST_TAG=$(gh api repos/$REPO_OWNER/$REPO_NAME/tags --jq '.[0].name' 2>/dev/null || true)
+          
           if [ -z "$LATEST_TAG" ]; then
             echo "No previous tags found. Starting from v1.5.8-r0."
             LATEST_TAG="v1.5.8-r0"
@@ -425,8 +443,9 @@ jobs:
           echo "New tag generated: $NEW_TAG"
           echo "NEW_TAG=${NEW_TAG}" >> $GITHUB_ENV
           
+          # Create and push tag
           git tag "$NEW_TAG"
-          git push --tags
+          git push origin "$NEW_TAG"
           
       - name: Download Artifacts
         if: ${{ steps.release_check.outcome == 'success' }}
